# coffeecoin

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  coffeecoin.conf  configure.ac
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.travis/: test_04_install.sh  test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
build-aux/m4/: bitcoin_qt.m4
build_msvc/: README.md
contrib/: README.md  gitian-build.py  install_db4.sh
contrib/init/: README.md  (+6 more)
depends/: README.md  description.md
doc/: JSON-RPC-interface.md  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  coffeecoin-conf.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  productivity.md  psbt.md  reduce-traffic.md  release-notes-coffeecoin.md  release-process.md  tor.md  zmq.md
doc/man/: Makefile.am  coffeecoin-cli.1  coffeecoin-qt.1  coffeecoin-tx.1  coffeecoin-wallet.1  coffeecoind.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chainparams.cpp  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp  httpserver.cpp  init.cpp  net.cpp  net_processing.cpp  netaddress.cpp  pow.cpp  txdb.cpp  validation.cpp
test/: README.md
(+234 files in other folders)
